# VINS-Course-Noted

./: CMakeLists.txt  README.md
cmake/: FindBoost.cmake  FindCeres.cmake  FindEigen3.cmake  FindGLOG.cmake  FindGTest.cmake  FindGlew.cmake  FindOpenCV.cmake  FindPangolin.cmake
config/: euroc_config.yaml  simulate_config.yaml
config/simulate/: cam_pose.txt  imu_int_pose.txt  imu_int_pose_noise.txt  imu_pose_noise.txt
doc/: vins_sfm.vsdx  vins_study_notes.docx
example/: CurveFitting.cpp  MonoOptimization.cpp  cuda_gtest.cpp  run_euroc.cpp  run_simulate.cpp
include/: System.h  estimator.h  feature_manager.h  feature_tracker.h  feature_tracker_parameters.h  parameters.h
include/backend/: backend.h  edge.h  edge_imu.h  edge_prior.h  edge_reprojection.h  eigen_types.h  imu_integration.h  loss_function.h  problem.h  vertex.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.h  vertex_speedbias.h
include/camera_models/calib/: CameraCalibration.h
include/camera_models/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  PinholeCamera.h
include/camera_models/chessboard/: ChessboardCorner.h  ChessboardQuad.h
include/camera_models/gpl/: EigenUtils.h  gpl.h
include/camodocal/calib/: CameraCalibration.h
include/camodocal/camera_models/: CameraFactory.h  CostFunctionFactory.h  EquidistantCamera.h  ScaramuzzaCamera.h
include/camodocal/chessboard/: Chessboard.h  ChessboardQuad.h  Spline.h
include/camodocal/gpl/: EigenQuaternionParameterization.h  EigenUtils.h
include/camodocal/sparse_graph/: Transform.h
include/factor/: integration_base.h
include/initial/: initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
include/utility/: concurrent_queue.h  concurrent_queue_test.h  context.h  context_impl.h  cuda_buffer.h  dense_cholesky.h  thread_pool.h  thread_pool_test.h  tic_toc.h  utility.h
lib/Debug/: MyVio.exp  MyVio.lib
lib/Release/: MyVio.exp
src/: System.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  feature_tracker_parameters.cc  parameters.cpp
src/backend/: edge.cpp  edge_imu.cpp  edge_prior.cpp  edge_reprojection.cpp  imu_integration.cpp  loss_function.cpp  problem.cpp  vertex.cpp  vertex_pose.cpp
src/camera_models/: intrinsic_calib.cc
src/camera_models/calib/: CameraCalibration.cc  CameraCalibration.cpp
src/camera_models/camera_models/: Camera.cc  Camera.cpp  CameraFactory.cc  CameraFactory.cpp  CataCamera.cc  CataCamera.cpp  CostFunctionFactory.cc  CostFunctionFactory.cpp  EquidistantCamera.cc  EquidistantCamera.cpp  PinholeCamera.cc  PinholeCamera.cpp  ScaramuzzaCamera.cc  ScaramuzzaCamera.cpp
src/camera_models/chessboard/: Chessboard.cc  Chessboard.cpp
src/camera_models/gpl/: EigenQuaternionParameterization.cc  EigenQuaternionParameterization.cpp  gpl.cc  gpl.cpp
src/camera_models/sparse_graph/: Transform.cc  Transform.cpp
src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
src/utility/: context.cpp  context_impl.cpp  dense_cholesky.cpp  dense_cholesky_test.cpp  thread_pool.cpp  utility.cpp
test/: run_euroc.cpp
